--- a/css/styles.css
+++ b/css/styles.css
@@ -228,6 +228,16 @@ main {
     padding: 2rem 5vw;
 }
 
+main > section:not(.about) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /* Estilos para la sección de experiencias */
 .experience-section {
     padding: 4rem 2rem;
